Bug 409662 - Missing "Save Attachments..." from Multiple Emails
Summary: Missing "Save Attachments..." from Multiple Emails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.9.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-10 00:41 UTC by Bradford
Modified: 2019-08-27 11:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bradford 2019-07-10 00:41:16 UTC
SUMMARY
Prior to recent distribution upgrade (Debian 9 to 10) you could select multiple emails and "Save Attachments..." from context menu.

This is helpful when downloading hundreds of reports.

STEPS TO REPRODUCE
1. Select multiple similar emails with attachments.
2. Right-click

OBSERVED RESULT
Missing "Save Attachments..."

EXPECTED RESULT
1. Select multiple similar emails with attachments.
2. Right-click, "Save Attachments..."



SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian 10 Stable
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
Thank you
Comment 1 Laurent Montel 2019-08-27 11:24:36 UTC
Git commit 1ed64bf4065afae609592a0c48272e3ca0ce14db by Laurent Montel.
Committed on 27/08/2019 at 11:24.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 409662 - Missing "Save Attachments..." from Multiple Emails

FIXED-IN: 5.12.1
Related: bug 392143

M  +2    -2    src/kmcommands.cpp
M  +1    -1    src/kmcommands.h
M  +2    -4    src/kmmainwidget.cpp
M  +1    -1    src/searchdialog/searchwindow.cpp

https://commits.kde.org/kmail/1ed64bf4065afae609592a0c48272e3ca0ce14db