Fix Bug 409662 - Missing "Save Attachments..." from Multiple Emails

FIXED-IN: 5.12.1
BUG: 409662
BUG: 392143